--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.idea
+.mvn
+mvnw/
+mvnw.cmd/
+pom.xml/
 
 ### STS ###
 .apt_generated
